added textover css styling

--- a/index.html
+++ b/index.html
@@ -5,54 +5,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="c:/bootcamp/mini_project/style.css">
+    <link rel="stylesheet" href="c:/bootcamp/mini_project/style.css">
     <title>Chloe Harris</title>
 </head>
 
 <body>
-<header>
-    <h1> Chloe Harris</h1>
-    <nav class="nav">
-        <ul>
-            <li><a href="#about-me"></a>About Me</li>
-            <li><a href="#work"></a>Work</li>
-            <li><a href="#contact-me"></a>Contact Me</li>
-            <li><a href="#resume"></a>Resume</li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <section class="about">
-        <h3> About Me</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, exercitationem nostrum quod illo
-            deleniti dignissimos sed enim ullam quidem laboriosam soluta vero, cupiditate possimus earum debitis omnis
-            veritatis reprehenderit delectus.
+    <header>
+        <h1> Chloe Harris</h1>
+        <nav class="nav">
+            <ul class="ul">
+                <li><a href="#about-me"></a>About Me</li>
+                <li><a href="#work"></a>Work</li>
+                <li><a href="#contact-me"></a>Contact Me</li>
+                <li><a href="#resume"></a>Resume</li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="container">
+            <!-- Using fig instead of div for SEO -->
+            <figure class="textover">
+                <img src="https://i.redd.it/84hvb6qljm861.jpg" alt="waves" style="width:100%;">
+                <figcaption>Welcome!</figcaption>
+            </figure>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, exercitationem nostrum quod illo
-            deleniti dignissimos sed enim ullam quidem laboriosam soluta vero, cupiditate possimus earum debitis omnis
-            veritatis reprehenderit delectus.
-        </p>
-    </section>
+        </div>
+        <section class="about">
+            <h3> About Me</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, exercitationem nostrum quod illo
+                deleniti dignissimos sed enim ullam quidem laboriosam soluta vero, cupiditate possimus earum debitis
+                omnis
+                veritatis reprehenderit delectus.
 
-    <section class="work">
-        <h3> Work</h3>
-    </section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, exercitationem nostrum quod illo
+                deleniti dignissimos sed enim ullam quidem laboriosam soluta vero, cupiditate possimus earum debitis
+                omnis
+                veritatis reprehenderit delectus.
+            </p>
+        </section>
+        <!-- Need to create class for floating box with text -->
+        <section class="work">
+            <h3>Work</h3>
+            <p>Surf Report</p>
+            <p>LED Wall</p>
+            <p>Calculator</p>
+            <p>Pastel Puzzles</p>
+            <p>Run Buddy</p>
+        </section>
 
-    <section class="contact me">
-        <h3> Contact Me</h3>
-        <ul>
-            <li>206.637.3241</li>
-            <li>chloe.a.harris17@gmail.com</li>
-            <li><a href="https://github.com/chloeharris1" target="_blank"></a>GitHub</li>
-            <li><a href="www.pinterest.com/ChloeAnne17" target="_blank"></a>Pinterest</li>
-            <li><a href="https://open.spotify.com/user/1256935245?si=f968a2a891d34f95" target="_blank"></a>Spotify</li>
-        </ul>
-    </section>
+        <section class="contact me">
+            <h3> Contact Me</h3>
+            <ul>
+                <li>206.637.3241</li>
+                <li>chloe.a.harris17@gmail.com</li>
+                <li><a href="https://github.com/chloeharris1" target="_blank"></a>GitHub</li>
+                <li><a href="www.pinterest.com/ChloeAnne17" target="_blank"></a>Pinterest</li>
+                <li><a href="https://open.spotify.com/user/1256935245?si=f968a2a891d34f95" target="_blank"></a>Spotify
+                </li>
+            </ul>
+        </section>
 
-</main>
-<footer>
+    </main>
+    <footer>
 
-</footer>
+    </footer>
 </body>
 
 </html>
