added profile pic to assets folder

--- a/index.html
+++ b/index.html
@@ -30,15 +30,14 @@
 
         <div class="class-2">
             <h3 id="about-me">About Me</h3>
-            <p>I am a Full-Stack Web Development student making the transition from the Fashion world to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Boostrap, jQuery, Git, and more.</p>
+            <p>I am a Full-Stack Web Development student making the transition from the Fashion world to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Boostrap, jQuery, Git, and more.
+            </p>
         </div>
         <div class="class-1">
             <h3 id="work">Work</h3>
 
             <section class="container">
-                <div class="work-1"><img
-                        src="../portfolio_page/assests/images/country-holiday-home.png"
-                        alt="Holiday" />
+                <div class="work-1"><img src="./assests/country-holiday-home.png" alt="Holiday" />
                     <p><h4 >Regional Holiday Calendar <br> <small>HTML/JavaScript/Materialize CSS</small></h4></p>
                 </div>
                 <div class="work-2">
