added link to resume pdf

--- a/index.html
+++ b/index.html
@@ -17,32 +17,34 @@
                 <li><span><a href="#about-me">About Me</a></span></li>
                 <li><span><a href="#work">Work</a></span></li>
                 <li><span><a href="#contact-me">Contact Me</a></span></li>
-                <li><span><a href="https://www.linkedin.com/in/chloe-harris-51982322" target="_blank">Resume</a></span>
+                <li><span><a href="./assests/Resume.pdf" target="_blank">Resume</a></span>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section><img class="responsive" src="./assests/lajollawaves.jpg" alt="Waves" />
+        <section><img class="responsive" src="./assests/lajollawaves.jpg" alt="Waves"/>
         </section>
         <span class="h2">Welcome to my site!</span>
 
         <div class="class-2">
             <h3 id="about-me">About Me</h3>
-            <p>I am a Full-Stack Web Development student making the transition from the Fashion world to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Boostrap, jQuery, Git, and more.
-            </p>
+            <img class="responsive" id="profilepic" src="./assests/profilepic1.jpg"/>
+
+            <p>I am a Full-Stack Web Development student making the transition from the apparel industry to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Bootstrap, jQuery, Git, and more.</p>
         </div>
         <div class="class-1">
             <h3 id="work">Work</h3>
 
             <section class="container">
-                <div class="work-1"><img src="./assests/country-holiday-home.png" alt="Holiday" />
-                    <p><h4 >Regional Holiday Calendar <br> <small>HTML/JavaScript/Materialize CSS</small></h4></p>
+                <div class="work-1"><img src="./assests/country-holiday-home.png" alt="Holiday"/>
+                    <p><h4>Regional Holiday Calendar <br> <small>HTML/JavaScript/Materialize CSS</small></h4>
+                    </p>
                 </div>
                 <div class="work-2">
                     <img src="../workdayscheduler/wdscheduler.JPG"
-                        alt="Schedule" />
+                        alt="Schedule"/>
                     <p><h4>Work Day Scheduler <br> <small>HTML/CSS/JavaScript</small></h4></p>
                 </div>
                 <div class="work-2">
