updated with project 2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Chloe Harris</title>
 </head>
@@ -17,52 +20,68 @@
                 <li><span><a href="#about-me">About Me</a></span></li>
                 <li><span><a href="#work">Work</a></span></li>
                 <li><span><a href="#contact-me">Contact Me</a></span></li>
-                <li><span><a href="./assests/Resume.pdf" target="_blank">Resume</a></span>
+                <li><span><a href="./assets/Resume.pdf" target="_blank">Resume</a></span>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section><img class="responsive" src="./assests/lajollawaves.jpg" alt="Waves"/>
+        <section><img class="responsive" src="./assets/lajollawaves.jpg" alt="Waves" />
         </section>
         <span class="h2">Welcome to my site!</span>
 
         <div class="class-2">
             <h3 id="about-me">About Me</h3>
-            <img class="responsive" id="profilepic" src="./assests/profilepic1.jpg"/>
+            <img class="responsive" id="profilepic" src="./assets/profilepic1.jpg" />
 
-            <p>I am a Full-Stack Web Development student making the transition from the apparel industry to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Bootstrap, jQuery, Git, and more.</p>
+            <p>I am a Full-Stack Web Development student making the transition from the apparel industry to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working
+                for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting
+                code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Bootstrap, jQuery, Git, and more.</p>
         </div>
         <div class="class-1">
             <h3 id="work">Work</h3>
 
             <section class="container">
-                <div class="work-1"><img src="./assests/country-holiday-home.png" alt="Holiday"/>
-                    <p><h4>Regional Holiday Calendar <br> <small>HTML/JavaScript/Materialize CSS</small></h4>
+                <div class="work-1"><img src="./assets/manatee.PNG" alt="Manatee" />
+                    <p>
+                        <a href="https://manatee-clicker.herokuapp.com/">
+                            <h4>Manatee Clicker Game <br> <small>JavaScript/MySQL/Handlebars</small></h4>
+                        </a>
                     </p>
                 </div>
                 <div class="work-2">
-                    <img src="../workdayscheduler/wdscheduler.JPG"
-                        alt="Schedule"/>
-                    <p><h4>Work Day Scheduler <br> <small>HTML/CSS/JavaScript</small></h4></p>
+                    <img src="./assets/wdscheduler.JPG" alt="Schedule" />
+                    <p>
+                        <a href="https://chloeharris1.github.io/workdayscheduler/">
+                            <h4>Work Day Scheduler <br> <small>HTML/CSS/JavaScript</small></h4>
+                        </a>
+                    </p>
                 </div>
                 <div class="work-2">
-                    <img src="../passwordgenerator/pwgenerator2.png"
-                        alt="Password" />
-                    <p><h4>Password Generator <br> <small>HTML/JavaScript/CSS</small></h4></p>
+                    <img src="./assets/pwgenerator2.png" alt="Password" />
+                    <p>
+                        <a href="https://chloeharris1.github.io/passwordgenerator/">
+                            <h4>Password Generator <br> <small>HTML/JavaScript/CSS</small></h4>
+                        </a>
+                    </p>
                 </div>
 
                 <div class="work-2">
-                    <img src="https://image.freepik.com/free-vector/pastel-ombre-background-pink-purple_53876-120750.jpg"
-                        alt="Pastel Colors" />
-                    <p><h4>Pastel Puzzles <br> <small>MERN Stack</small></h4></p>
+                    <img src="./assets/country-holiday-home.png" alt="Regional">
+                    <p>
+                        <a href="https://lemelisk27.github.io/country-holiday/" id="project1">
+                            <h4>Regional Holiday Calendar <br> <small>HTML/JavaScript/CSS</small></h4>
+                        </a>
+                    </p>
                 </div>
 
+
                 <div class="work-2">
-                    <img src="https://s.abcnews.com/images/Health/GTY_two_runners_as_151204_16x9_992.jpg"
-                        alt="Runners" />
-                    <p><h4>Run Buddy <br> <small>HTML/CSS</small></h4></p>
+                    <img src="https://s.abcnews.com/images/Health/GTY_two_runners_as_151204_16x9_992.jpg" alt="Runners" />
+                    <p>
+                        <h4>Run Buddy <br> <small>HTML/CSS</small></h4>
+                    </p>
                 </div>
             </section>
         </div>
