additional style updates

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <p>I am a Full-Stack Web Development student making the transition from the apparel industry to a professional Web Development career. I have an extensive background of 10 years in production and operations within the Fashion industry, working
                 for specialized designers such as Halston to corporation driven lines like Tommy Bahama. I enjoyed working in the fashion industry, but ultimately have been drawn to coding ever since I was exposed to it. Like the pieces of a lego, putting
-                code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, Javascript, Bootstrap, jQuery, Git, and more.</p>
+                code together just strikes a balance in my life that I now want to pursue. I have experience with HTML, CSS, Javascript, jQuery, Node, MySQL, Git, and more.</p>
         </div>
         <div class="class-1">
             <h3 id="work">Work</h3>
